--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
 	<meta name="author" content="李华生、陈金成">
 	<title>音乐</title>
-	<link rel="stylesheet" href="https://deny.neocities.org/bin/css/public.css">
-	<link rel="stylesheet" href="https://deny.neocities.org/bin/css/demo.css">
+	<link rel="stylesheet" href="./bin/css/public.css">
+	<link rel="stylesheet" href="./bin/css/demo.css">
     <!--[if lte IE 8]>测试IE,由于您是IE低版本浏览器,存在一些兼容性问题,请您移去其他浏览器访问<![endif]-->
     <!--[if lte IE 8]>不支持CSS3属性,请您更换更高级的浏览器,如Chrome Google,Firefox,IE10及以上版本,Safari,Opera等等<![endif]-->
     <!--[if lte IE 8]>IE存在问题,请移去其他浏览器访问<![endif]-->
@@ -31,8 +31,8 @@
 			<div class="head">
 				<!--logo-->
 				<div class="head_logo">
-					<a href="">
-						<img src="https://deny.neocities.org/bin/images/logoS.jpg" width="276" height="150" alt="logo">
+					<a href="demo.html">
+						<img src="./bin/images/logoS.jpg" width="276" height="150" alt="logo">
 					</a>
 					<div class="clear"></div>
 				</div>
@@ -41,14 +41,14 @@
 					<ul class="h_navList">
 						<li class="h_navList_hover">
 							<div class="h_navHome">
-								<a class="h_navHref" href="https://deny.neocities.org">
+								<a class="h_navHref" href="demo.html">
 									<span>首页</span>
 								</a>
 							</div>
 						</li>
 						<li class="h_navList_hover">
 							<div class="h_navsinger">
-								<a class="h_navHref" href="https://deny.neocities.org/singer/index.html">
+								<a class="h_navHref" href="./singer/index.html">
 									<span>歌手</span>
 								</a>
 							</div>
@@ -77,6 +77,13 @@
 								</div>
 								<div class="songBox">
 									<ul class="songList">
+										<!--<li>-->
+											<!--<div class="song">-->
+												<!--<a class="songHref" href="javascript:void(0);">-->
+													<!--<span class="songTitle">明天你好案发后粉红色东方航空水电费!</span>-->
+												<!--</a>-->
+											<!--</div>-->
+										<!--</li>-->
 									</ul>
 								</div>
 								<div class="searchWrap">
@@ -94,12 +101,12 @@
 					<ul>
 						<li class="loginLi rightLi">
 							<div class="loginBox">
-								<a href="https://deny.neocities.org/login/login.html">登录</a>
+								<a href="./login/login.html">登录</a>
 							</div>
 						</li>
                         <li class="registerLi rightLi">
                             <div class="registerBox">
-                                <a href="https://deny.neocities.org/register/index.html">注册</a>
+                                <a href="./register/index.html">注册</a>
                             </div>
                         </li>
                         <!--<li class="userLi rightLi">-->
@@ -110,7 +117,7 @@
                         <!--</li>-->
 						<li class="introduceLi rightLi">
 							<div class="introduceBox">
-								<a href="https://deny.neocities.org/selfIntro/index.html">关于我们</a>
+								<a href="./selfIntro/index.html">关于我们</a>
 							</div>
 						</li>
 					</ul>
@@ -130,28 +137,28 @@
 						<li class="bannerLi">
 							<div>
 								<a href="javascript:void(0)">
-									<img src="https://deny.neocities.org/bin/images/banner1.jpg" width="1125" height="360" alt="">
+									<img src="./bin/images/banner1.jpg" width="1125" height="360" alt="">
 								</a>
 							</div>
 						</li>
 						<li class="bannerLi">
 							<div>
 								<a href="javascript:void(0)">
-									<img src="https://deny.neocities.org/bin/images/banner2.jpg" width="1125" height="360" alt="">
+									<img src="./bin/images/banner2.jpg" width="1125" height="360" alt="">
 								</a>
 							</div>
 						</li>
 						<li class="bannerLi">
 							<div>
 								<a href="javascript:void(0)">
-									<img src="https://deny.neocities.org/bin/images/banner3.jpg" width="1125" height="360" alt="">
+									<img src="./bin/images/banner3.jpg" width="1125" height="360" alt="">
 								</a>
 							</div>
 						</li>
 						<li class="bannerLi">
 							<div>
 								<a href="javascript:void(0)">
-									<img src="https://deny.neocities.org/bin/images/banner4.jpg" width="1125" height="360" alt="">
+									<img src="./bin/images/banner4.jpg" width="1125" height="360" alt="">
 								</a>
 							</div>
 						</li>
@@ -578,7 +585,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -592,7 +599,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -606,7 +613,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -620,7 +627,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -634,7 +641,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -648,7 +655,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -662,7 +669,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -676,7 +683,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -690,7 +697,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -704,7 +711,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -718,7 +725,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -732,7 +739,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -746,7 +753,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -760,7 +767,7 @@
                             <li class="mv-list-item">
                                 <div class="mv-list-item-box">
                                     <a href="javascript:void(0)">
-                                        <img src="https://deny.neocities.org/bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
+                                        <img src="./bin/images/T015R640x360M101001ddRxQ2QDnDz.jpg" width="640" height="360" alt="">
                                         <span class="publicIcon playBg"></span>
                                     </a>
                                     <a class="mv-content-hover" href="javascript:void(0)">
@@ -881,6 +888,17 @@
                                         </a>
                                     </div>
                                 </li>
+                                <!--<li class="popularWrap-list-item">-->
+                                    <!--<div class="popularWrap-list-item-box">-->
+                                        <!--<span class="num">10、</span>-->
+                                        <!--<a href="javascript:void(0)">-->
+                                            <!--<span class="popular-songName">绿色</span>-->
+                                        <!--</a>-->
+                                        <!--<a class="popular-single-item" href="javascript:void(0)">-->
+                                            <!--<span class="popular-singleName">陈雪凝</span>-->
+                                        <!--</a>-->
+                                    <!--</div>-->
+                                <!--</li>-->
                             </ol>
                             <div class="clear"></div>
                         </div>
@@ -1102,6 +1120,14 @@
                 <div class="fixedMusicList">
                     <i class="publicIcon listMusicIcon"></i>
                     <ul class="musicList">
+                        <!--<li>-->
+                            <!--<a class="listSongName" href="javascript:void(0)">等你下课(with 杨瑞代)</a>-->
+                            <!--<a class="listSinger" href="javascript:void(0)">周杰伦</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a class="listSongName" href="javascript:void(0)">等你下课(with 杨瑞代)</a>-->
+                            <!--<a class="listSinger" href="javascript:void(0)">周杰伦</a>-->
+                        <!--</li>-->
                     </ul>
                 </div>
                 <!--底部播放控制-->
@@ -1109,7 +1135,7 @@
                     <!--歌曲展示图片-->
                     <div class="fixed-musicImgWrap">
                         <a class="fixed-imgHref" href="javascript:void(0)">
-                            <img class="fixed-showImg" src="https://deny.neocities.org/bin/images/109951163971353073.jpg" width="140" height="140" alt="">
+                            <img class="fixed-showImg" src="./bin/images/109951163971353073.jpg" width="140" height="140" alt="">
                         </a>
                         <div class="clear"></div>
                     </div>
@@ -1194,7 +1220,7 @@
 		</footer>
 		<audio id="musicPlay"></audio>
 	</div>
-	<script src="https://deny.neocities.org/bin/js/player.js" type="text/javascript"></script>
+	<script src="./bin/js/player.js" type="text/javascript"></script>
 	<script type="text/javascript">
         var searchInput = document.getElementById('searchInput');
 		(function(){
@@ -1245,11 +1271,11 @@
             }())
 		}())
 	</script>
-    <script src="https://deny.neocities.org/bin/js/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="https://deny.neocities.org/bin/js/lazyload.js" type="text/javascript"></script>
-    <script src="https://deny.neocities.org/bin/js/search.js" type="text/javascript"></script>
-    <script src="https://deny.neocities.org/bin/js/index.js"></script>
-    <script src="https://deny.neocities.org/bin/js/dataRender.js" defer async></script>
-    <script src="https://deny.neocities.org/bin/js/song.js" defer async></script>
+    <script src="./bin/js/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="./bin/js/lazyload.js" type="text/javascript"></script>
+    <script src="./bin/js/search.js" type="text/javascript"></script>
+    <script src="./bin/js/index.js"></script>
+    <script src="./bin/js/dataRender.js" defer async></script>
+    <script src="./bin/js/song.js" defer async></script>
 </body>
 </html>
