修改一下问题

--- a/bin/list/index.html
+++ b/bin/list/index.html
@@ -23,7 +23,7 @@
             <div class="head">
                 <!--logo-->
                 <div class="head_logo">
-                    <a href="../../demo.html">
+                    <a href="/musicSystem">
                         <img src="../images/logoS.jpg" width="276" height="150" alt="logo">
                     </a>
                     <div class="clear"></div>
@@ -33,7 +33,7 @@
                     <ul class="h_navList">
                         <li class="h_navList_hover">
                             <div class="h_navHome">
-                                <a class="h_navHref" href="../../demo.html">
+                                <a class="h_navHref" href="/musicSystem">
                                     <span>首页</span>
                                 </a>
                             </div>
@@ -203,7 +203,7 @@
             </div>
         </footer>
     </div>
-    <!--<script src="../js/search.js" type="text/javascript"></script>-->
+    <script src="../js/search.js" type="text/javascript"></script>
     <!--<script src="../js/song.js" type="text/javascript"></script>-->
     <!--<script src="../js/singer.js" type="text/javascript"></script>-->
     <script src="./js/index.js" type="text/javascript"></script>
