--- a/login/login.html
+++ b/login/login.html
@@ -17,7 +17,7 @@
 	<div class="wrap">
 		<div class="head">
 		<div class="h-logo">
-			<a href="demo.html">
+			<a href="../index.html">
 				<img src="../bin/images/logoS.jpg" width="276" height="150" alt="logo">
 			</a>
 		</div>
