--- a/register/index.html
+++ b/register/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
         <div class="head">
             <div class="h-logo">
-                <a href="../demo.html">
+                <a href="../index.html">
                     <img src="../bin/images/logoS.jpg" width="276" height="150" alt="logo">
                 </a>
             </div>
