--- a/singer/index.html
+++ b/singer/index.html
@@ -23,7 +23,7 @@
             <div class="head">
                 <!--logo-->
                 <div class="head_logo">
-                    <a href="../demo.html">
+                    <a href="../index.html">
                         <img src="../bin/images/logoS.jpg" width="276" height="150" alt="logo">
                     </a>
                     <div class="clear"></div>
@@ -33,7 +33,7 @@
                     <ul class="h_navList">
                         <li class="h_navList_hover">
                             <div class="h_navHome">
-                                <a class="h_navHref" href="../demo.html">
+                                <a class="h_navHref" href="../index.html">
                                     <span>首页</span>
                                 </a>
                             </div>
