--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="head">
 				<!--logo-->
 				<div class="head_logo">
-					<a href="demo.html">
+					<a href="/">
 						<img src="./bin/images/logoS.jpg" width="276" height="150" alt="logo">
 					</a>
 					<div class="clear"></div>
@@ -41,7 +41,7 @@
 					<ul class="h_navList">
 						<li class="h_navList_hover">
 							<div class="h_navHome">
-								<a class="h_navHref" href="demo.html">
+								<a class="h_navHref" href="/">
 									<span>首页</span>
 								</a>
 							</div>
@@ -1222,18 +1222,7 @@
 	</div>
 	<script src="./bin/js/player.js" type="text/javascript"></script>
 	<script type="text/javascript">
-        var searchInput = document.getElementById('searchInput');
 		(function(){
-		    /*输入框*/
-		    searchInput.onfocus = function(){
-		        this.placeholder = '';
-			};
-			searchInput.onblur = function(){
-		        var temp = this.value;
-		        if(temp == "" || temp == null){
-		            this.placeholder = "请输入歌曲";
-				}
-			};
             var comfire = document.getElementById('comfire'),
                 shadow = document.getElementsByClassName('shadowWrap')[0];
             comfire.onclick = function(){
