--- a/index.html
+++ b/index.html
@@ -1220,8 +1220,12 @@
 		</footer>
 		<audio id="musicPlay"></audio>
 	</div>
-	<script src="./bin/js/player.js" type="text/javascript"></script>
-	<script type="text/javascript">
+    <script src="./bin/js/dataRender.js" defer async></script>
+    <script src="./bin/js/volume.js"></script>
+    <script src="./bin/js/player.js" type="text/javascript"></script>
+    <script src="./bin/js/music.js"></script>
+    <script src="./bin/js/love.js"></script>
+    <script type="text/javascript">
 		(function(){
             var comfire = document.getElementById('comfire'),
                 shadow = document.getElementsByClassName('shadowWrap')[0];
@@ -1264,7 +1268,6 @@
     <script src="./bin/js/lazyload.js" type="text/javascript"></script>
     <script src="./bin/js/search.js" type="text/javascript"></script>
     <script src="./bin/js/index.js"></script>
-    <script src="./bin/js/dataRender.js" defer async></script>
-    <script src="./bin/js/song.js" defer async></script>
+    <!--<script src="./bin/js/song.js" defer async></script>-->
 </body>
 </html>
