--- a/singerContent/index.html
+++ b/singerContent/index.html
@@ -106,20 +106,20 @@
         <main class="container">
             <div class="container_head">
                 <div class="left">
-                    <img src="https://y.gtimg.cn/music/photo_new/T001R300x300M000000CK5xN3yZDJt.jpg?max_age=2592000"
+                    <img class="left_img" src="https://y.gtimg.cn/music/photo_new/T001R300x300M000000CK5xN3yZDJt.jpg?max_age=2592000"
                         alt="">
                 </div>
                 <div class="right">
                     <h2 class="item_title">许嵩</h2>
                     <div class="item_desc">
-                        <p>外文名：Vae</p>
+                        <!-- <p>外文名：Vae</p>
                         <p>别名：嵩哥</p>
                         <p>国籍：中国</p>
                         <p>出生地：安徽合肥</p>
                         <p>职业：音乐人</p>
                         <p>身高：180cm</p>
                         <p>体重：60kg</p>
-                        <p>血型：A型</p>
+                        <p>血型：A型</p> -->
                     </div>
                     <div class="item_achievement">
                         <ul class="achievement_list">
@@ -152,136 +152,6 @@
                             <li class="song_list_head_item song_list_head_time">时长</li>
                         </ul>
                         <ul class="song_list_list">
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="song_list_list_item">
-                                <div class="item_song_box">
-                                    <div class="item_sign item_songName">
-                                        <a href="#" class="common song_href">雅俗共赏</a>
-                                    </div>
-                                    <div class="item_sign item_albumName">
-                                        <a href="#" class="common song_alubm">青年晚报</a>
-                                    </div>
-                                    <div class="item_sign item_time">
-                                        <span class="common time_sign">04:09</span>
-                                    </div>
-                                </div>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -289,48 +159,6 @@
             <div class="similar">
                 <h5 class="similar_title">相似歌手</h5>
                 <ul class="similar_list">
-                    <li class="similar_list_item">
-                        <div class="singer">
-                            <img src="https://y.gtimg.cn/music/photo_new/T001R150x150M000001z2JmX09LLgL.jpg?max_age=2592000"
-                                alt="">
-                            <p class="sing_name">汪苏泷</p>
-                        </div>
-                    </li>
-                    <li class="similar_list_item">
-                        <div class="singer">
-                            <img src="https://y.gtimg.cn/music/photo_new/T001R150x150M000001z2JmX09LLgL.jpg?max_age=2592000"
-                                alt="">
-                            <p class="sing_name">汪苏泷</p>
-                        </div>
-                    </li>
-                    <li class="similar_list_item">
-                        <div class="singer">
-                            <img src="https://y.gtimg.cn/music/photo_new/T001R150x150M000001z2JmX09LLgL.jpg?max_age=2592000"
-                                alt="">
-                            <p class="sing_name">汪苏泷</p>
-                        </div>
-                    </li>
-                    <li class="similar_list_item">
-                        <div class="singer">
-                            <img src="https://y.gtimg.cn/music/photo_new/T001R150x150M000001z2JmX09LLgL.jpg?max_age=2592000"
-                                alt="">
-                            <p class="sing_name">汪苏泷</p>
-                        </div>
-                    </li>
-                    <li class="similar_list_item">
-                        <div class="singer">
-                            <img src="https://y.gtimg.cn/music/photo_new/T001R150x150M000001z2JmX09LLgL.jpg?max_age=2592000"
-                                alt="">
-                            <p class="sing_name">汪苏泷</p>
-                        </div>
-                    </li>
-                    <li class="similar_list_item">
-                        <div class="singer">
-                            <img src="https://y.gtimg.cn/music/photo_new/T001R150x150M000001z2JmX09LLgL.jpg?max_age=2592000"
-                                alt="">
-                            <p class="sing_name">汪苏泷</p>
-                        </div>
-                    </li>
                 </ul>
             </div>
         </main>
@@ -341,6 +169,7 @@
             </div>
         </footer>
     </div>
+    <script src="../bin/js/singer.js"></script>
     <script src="../bin/js/search.js" type="text/javascript"></script>
     <script src="./js/index.js"></script>
 </body>
